<resources>
    <string name="app_name">Fiskinfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Innstillinger</string>
    <string name="ok">OK</string>
    <string name="save">Lagre</string>
    <string name="cancel">Avbryt</string>
    <string name="accept">Godta</string>
    <string name="zero_number">0</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="update">Oppdater</string>
    <string name="no_internet_access">Ingen internett-tilgang</string>
    <string name="map_to_plotter">Kart til din kartplotter</string>
    <string name="abbreviation_na">n.a.</string>
    <string name="unable_to_download_no_network">Siden du ikke har internett-tilgang er det ikke mulig å laste ned kart.</string>
    <string name="datetime_format_yyyy_mm_dd_no_separator">yyyyMMdd</string>
    <string name="datetime_format_yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="datetime_format_yyyy_mm_dd_hh_mm">yyyy-MM-dd HH:mm</string>
    <string name="datetime_format_yyyy_mm_dd_t_hh_mm_ss">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="datetime_format_yyyy_mm_dd_t_hh_mm_ss_sss">yyyy-MM-dd\'T\'HH:mm:ss.SSS</string>
    <string name="datetime_format_yyyy_mm_dd_t_hh_mm_ss_z">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="datetime_format_yyyy_mm_dd_t_hh_mm_ss_sss_z">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="datetime_format_hh_mm_ss">HH:mm:ss</string>
    <string name="date_colon">Dato:</string>
    <string name="time_colon">Tid:</string>
    <string name="archive">Arkiver</string>
    <string name="null_string_lowercase">null</string>
    <string name="do_not_show_message_again">Ikke vis denne meldingen igjen</string>
    <string name="not_available">Ikke tilgjengelig</string>
    <string name="on">På</string>
    <string name="off">Av</string>
    <string name="error_field_required">Dette feltet er påkrevd</string>
    <string name="error_field_required_short">Påkrevd</string>
    <string name="error_lost_tool_cannot_be_marked_removed">Redskap må enten merkes som tatt opp eller tapt, ikke begge.</string>
    <string name="placeholder_string">Placeholder</string>
    <string name="placeholder_empty_string"></string>
    <string name="date_placeholder_string">Dato</string>
    <string name="placeholder_name">Navn</string>
    <string name="placeholder_setting_name">Setting</string>
    <string name="placeholder_phone_number">Phone number</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_tool_type">Tool type</string>
    <string name="placeholder_position">Position</string>
    <string name="placeholder_vessel_name">Vessel</string>
    <string name="placeholder_seismic_type">Seismikkområde</string>
    <string name="placeholder_j_message">J-melding</string>
    <string name="nnew">Ny</string>
    <string name="select">Velg</string>
    <string name="file_name">Filnavn</string>
    <string name="create">Lagre</string>
    <string name="no_data">Ingen data</string>
    <string name="no_folder_name">Feltet kan ikke være tomt.</string>
    <string name="location">Sted</string>
    <string name="cant_read_folder">Kan ikke lese mappen.</string>
    <string name="summary">Oversikt</string>
    <string name="my_page">Last ned kart</string>
    <string name="map">Kart</string>
    <string name="register_tool">Redskapsregistrering</string>
    <string name="my_tools">Redskap</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="navigation_header_profile_image_view_description">Profile picture</string>
    <string name="settings_fragment_title">Innstillinger</string>
    <string name="about_detailed">Info om appen.\nHvorfor kreves de forskjellige tilgangene?\nNevne open source libs brukt.\n</string>
    <string name="about_fragment_title">Om appen</string>
    <string name="user_information">Brukerprofil</string>
    <string name="request_write_access_offline_mode_rationale">Offlinemodus trenger skrivetillatelse til å laste ned og lagre kart for å fungere. Ønsker du å tillate dette?</string>
    <string name="my_page_all_available_subscriptions">Tilgjengelige abonnementer</string>
    <string name="my_page_all_warnings">Mine varsler</string>
    <string name="my_page_my_subscriptions">Mine abonnementer</string>
    <string name="subscribe">Abonnér</string>
    <string name="fishing_facility_api_name">fishingfacility</string>
    <string name="fishing_facility_name">Redskap</string>
    <string name="subscription_update_successful">Abonnement oppdatert</string>
    <string name="subscription_update_failed">Abonnementsendring feilet</string>
    <string name="my_page_fragment_title">Nedlasting</string>
    <string name="fishing_facility_limited_details">Din bruker har ikke tilgang til detaljert redskapsinformasjon som hvem som har satt redskaper. Du kan søke om tilgang på dette via lenken under:\n\thttps://www.barentswatch.no/s/Tilgang-til-bruksdata/</string>
    <string name="download_title">Nedlasting</string>
    <string name="error_cannot_download_without_internet_access">Kan ikke laste ned kartlag uten internettilgang.</string>
    <string name="polar_low">Polart lavtrykk</string>
    <string name="tool_legend">Tegnforklaring for redskaper</string>
    <string name="map_loading">Laster inn kart</string>
    <string name="map_loading_info">Vennligst vent mens kartet lastes inn.</string>
    <string name="loading_map_layers">Laster inn kartlag.</string>
    <string name="offline_mode_map_used_title">Offlinemodus</string>
    <string name="offline_mode_map_used_info">Da det ser ut til at du ikke har internett-tilgang prøver appen å benytte kart som har blitt lastet ned mens appen var i offlinemodus.</string>
    <string name="offline_mode_map_disabled_title">Kart ikke tilgjengelig</string>
    <string name="offline_mode_map_disabled_info">Kartet kan ikke vises ettersom det ser ut til at du ikke har internett-tilgang. Offline-mode vil bli tilgjengelig i neste versjon av appen.</string>
    <string name="search_tools_title">Søk i redskap</string>
    <string name="vessel_name_unknown">Ukjent fartøy</string>
    <string name="vessel">Fartøy: </string>
    <string name="vessel_name_na">Fartøy: n.a.</string>
    <string name="tool_type_with_colon">Redskapstype: </string>
    <string name="tool_type_na">Redskapstype: n.a.</string>
    <string name="vessel_phone">Tlf</string>
    <string name="vessel_phone_na">Tlf: n.a.</string>
    <string name="tool_set_date">Satt: </string>
    <string name="tool_set_date_na">Satt: n.a.</string>
    <string name="tool_pos">Posisjon: </string>
    <string name="loading_tools_info">Laster inn redskapsdata, vennligst vent.</string>
    <string name="tools_search_no_data_title">Ingen data</string>
    <string name="tools_search_no_data">Applikasjonen klarer ikke å finne en fil med redskapsinformasjon og kan heller ikke laste ned denne informasjonen da det ser ut som du ikke har nettverkstilgang.</string>
    <string name="search_tools_init_error">Feil</string>
    <string name="search_tools_init_info">Det oppstod en feil under opprettingen av søkefeltet.</string>
    <string name="jump_to_bottom">Hopp til slutten</string>
    <string name="tool_set_date_placeholder">Dato</string>
    <string name="tool">Redskap</string>
    <string name="map_fragment_title">Kart</string>
    <string name="seismic_survey_ongoing">Pågående seismikkområde</string>
    <string name="seismic_survey_planned">Planlagt seismikkområde</string>
    <string name="planned_from">Planlagt fra:</string>
    <string name="planned_to">Planlagt til:</string>
    <string name="survey_type">Type</string>
    <string name="view_ais_tracking">Vis AIS-sporing</string>
    <string name="company">Selskap</string>
    <string name="responsible_party">Ansvarlig</string>
    <string name="seismic_type">Type</string>
    <string name="seismic_period">Periode</string>
    <string name="seismic_fact_hyperlink_text">Faktaside</string>
    <string name="seismic_map_hyperlink_text">Kartoversikt</string>
    <string name="download_file_to_view_position">Last ned fil for å se posisjon</string>
    <string name="ais_tracking">AIS-sporing</string>
    <string name="seismic_ais_tracking_not_implemented_yet">Denne funksjonen vil bli tilgjengelig ved en senere oppdatering.</string>
    <string name="seismic_area_start_date">Startdato</string>
    <string name="show_marinogram_from_yr">Se marinogram fra yr.no</string>
    <string name="request_write_access_dialog_title">Filtilgang</string>
    <string name="request_write_access_map_rationale">Fiskinfo kan lagre redskapsdata på enheten så du ikke laster ned data gjentatte ganger, men dette krever skrivetillatelse på telefonen. Ønsker du å tillate dette?</string>
    <string name="sea_floor_installation">Havbunnsinstallasjon</string>
    <string name="type">Type</string>
    <string name="function">Funksjon</string>
    <string name="depth">Dybde</string>
    <string name="field">Felt</string>
    <string name="sea_floor_installation_area_start_date">Oppstartsdato</string>
    <string name="operator">Operatør</string>
    <string name="startup_date">Oppstart</string>
    <string name="ice_concentration">Iskonsentrasjon</string>
    <string name="ice_type">Istype</string>
    <string name="satellite_images_of_sea_ice">Satellittbilder av havis</string>
    <string name="satellite_images_of_sea_ice_url">http://www.polarview.aq/arctic</string>
    <string name="met_ice_information_url">http://polarview.met.no/</string>
    <string name="met_ice_information">Meterologisk institutts isinformasjon</string>
    <string name="unknown_ice_concentration">Ukjent iskonsentrasjonstype</string>
    <string name="map_search_view_tag_search">Søk</string>
    <string name="map_search_view_tag_clear">Fjern</string>
    <string name="error_no_match_for_vessel_search">Ingen treff</string>
    <string name="primary_background_map">Norges grunnkart</string>
    <string name="error_cannot_zoom_to_position_without_location_access">Kan ikke gå til posisjon uten posisjonstilgang</string>
    <string name="closed_from_date">Stengt fra dato: %1$s</string>
    <string name="closed_to_date">Stengt til dato: %1$s</string>
    <string name="closed_for">Stengt for: %1$s</string>
    <string name="fish_group">Fiskegruppe: %1$s</string>
    <string name="download">Last ned</string>
    <string name="download_map_layer_dialog_help_text">Her kan du laste ned kartlag i forskjellige formater. Velg et kartlag og klikk last ned. Kartlaget lagres som standard i mappen Downloads/fiskinfo med mindre du har valgt en annen mappe i innstillingene.</string>
    <string name="prompt_email">Epostadresse</string>
    <string name="prompt_password">Passord</string>
    <string name="action_sign_in">Logg inn</string>
    <string name="action_sign_in_short">Logg inn</string>
    <string name="action_forgot_password">Glemt passord</string>
    <string name="action_sign_up">Registrer bruker</string>
    <string name="enter_tool_type">Oppgi redskapstype</string>
    <string name="vessel_name">Fartøynavn</string>
    <string name="enter_vessel_name">Venligst oppgi navnet på fartøyet</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="enter_phone_number">Venligst oppgi telefonnummeret</string>
    <string name="setup_datetime">Satt opp</string>
    <string name="enter_setup_datetime">Venligst oppgi når redskapet ble satt</string>
    <string name="ircs">IRCS</string>
    <string name="enter_ircs">Venligst oppgi ircs</string>
    <string name="mmsi">MMSI</string>
    <string name="enter_mmsi">Venlgist oppgi mmsi</string>
    <string name="imo">IMO</string>
    <string name="enter_imo">Venligst oppgi imo</string>
    <string name="vesselmail">Fartøyets E-postadresse</string>
    <string name="enter_vesselmail">Venligst oppgi båtens Epostadresse</string>
</resources>