<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <com.rey.material.widget.Spinner
            android:id="@+id/spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="128dp"
            android:padding="8dp"
            app:spn_label="@string/enter_tool_type"
            app:v_styleId="@array/spinner"/>

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_vesselname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/vessel_name"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_vessel_name"
            app:v_styleId="@array/edittext"
            />

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_vesselmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/vesselmail"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_vesselmail"
            app:v_styleId="@array/edittext"
            />


        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/phone_number"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_phone_number"
            app:v_styleId="@array/edittext"
            />

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_setup_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/setup_datetime"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_setup_datetime"
            app:v_styleId="@array/edittext"
            />

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_ircs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/ircs"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_ircs"
            app:v_styleId="@array/edittext"
            />

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_mmsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/mmsi"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_mmsi"
            app:v_styleId="@array/edittext"
            />

        <com.rey.material.widget.EditText
            android:id="@+id/register_tool_imo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/imo"
            app:et_inputId="@+id/register_tool_start_type_instancestate"
            app:et_supportMode="helperWithError"
            app:et_helper="@string/enter_imo"
            app:v_styleId="@array/edittext"
            />



    </LinearLayout>

</ScrollView>
