<!--
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/fd_linear_layout_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/fd_linear_layout_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/file_dialog_select_folder_layout_padding_bottom"
            android:paddingStart="@dimen/file_dialog_select_folder_layout_padding_left"
            android:paddingEnd="@dimen/file_dialog_select_folder_layout_padding_right"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/fd_button_new"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/nnew"
                    />

                <Button
                    android:id="@+id/fd_button_cancel"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/cancel"
                    />

                <Button
                    android:id="@+id/fd_button_select"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/select"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fd_linear_layout_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/file_dialog_create_folder_layout_padding_bottom"
            android:paddingStart="@dimen/file_dialog_create_folder_layout_padding_left"
            android:paddingEnd="@dimen/file_dialog_create_folder_layout_padding_right"
            >

            <TextView
                android:id="@+id/text_view_filename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                />

            <EditText
                android:id="@+id/fd_edit_text_file"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/fd_button_cancel_create"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/cancel"
                    />

                <Button
                    android:id="@+id/fd_button_create"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/create"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fd_linear_layout_list"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/no_data"
            />
    </LinearLayout>

</RelativeLayout>