<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.dualog.ifangst.LoginActivity" >

    <!-- Login progress -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/login_logo_view"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_logo_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/login_form"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/login_logo_view"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <AutoCompleteTextView
                android:id="@+id/email_sign_in_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true" >

                <requestFocus />

            </AutoCompleteTextView>

            <EditText
                android:id="@+id/password_sign_in_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_edit_text"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_sign_in_edit_text"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotten_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/sign_in_button"
                android:layout_below="@+id/sign_in_button"
                android:layout_marginTop="18dp"
                android:text="@string/action_forgot_password"
                android:textColor="@color/hyperlink_blue" />

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/forgotten_password_text_view"
                android:layout_alignRight="@+id/sign_in_button"
                android:text="@string/action_sign_up"
                android:textColor="@color/hyperlink_blue" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TestLogin"
            android:id="@+id/button1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TestGetSubscribable"
            android:id="@+id/button2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TestSub"
            android:id="@+id/button3"
            android:layout_below="@+id/button1"
            android:layout_toEndOf="@+id/login_progress" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TestYolo"
            android:id="@+id/button4"
            android:layout_alignTop="@+id/button3"
            android:layout_alignStart="@+id/button2" />
    </RelativeLayout>

</ScrollView>