<!--
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<ScrollView
    android:id="@+id/dialog_message_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/download_map_layer_dialog_main_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/dialog_download_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            card_view:contentPaddingLeft="32dp"
            card_view:contentPaddingRight="32dp"
            card_view:contentPaddingTop="32dp"
            card_view:contentPaddingBottom="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/dialog_download_map_container"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/dialog_download_header"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ikon_kart_til_din_kartplotter"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map_to_plotter"/>
                    </TableRow>
                </TableLayout>
                <ExpandableListView
                    android:id="@+id/exportMetadataMapServices"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:id="@+id/download_map_layer_bottom_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_container_margin_top"
            android:layout_marginTop="@dimen/dialog_internal_container_large_margin_top"
            android:layout_below="@+id/dialog_download_card_view"
            android:orientation="horizontal"
            android:paddingBottom="1.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="5.0dip">

            <Button
                android:id="@+id/download_map_layer_download_button"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/download"/>

            <Button
                android:id="@+id/download_map_layer_cancel_button"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/cancel"/>
        </LinearLayout>


        <TextView
            android:id="@+id/download_map_layer_help_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/download_map_layer_bottom_button_container"
            android:layout_marginBottom="@dimen/dialog_container_margin_top"
            android:text="@string/download_map_layer_dialog_help_text"/>

    </RelativeLayout>

</ScrollView>